--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/new_image"
-                android:src="@drawable/ic_action_add"/>
+                android:src="@drawable/ic_action_add"
+                android:onClick="backBtn"/>
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -31,7 +32,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/clean"
-                android:src="@drawable/ic_action_reload"/>
+                android:src="@drawable/ic_action_reload"
+                android:onClick="resetBtn"/>
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -71,8 +73,8 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:id="@+id/blue1"
-                android:background="#FF0000FF"
-                android:onClick=""/>
+                android:background="#FF000000"
+                android:onClick="blackColor"/>
             <ImageButton
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="5dp"
@@ -80,8 +82,8 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:id="@+id/blue2"
-                android:background="#FF0000FF"
-                android:onClick=""/>
+                android:background="#FFFFFFFF"
+                android:onClick="whiteColor"/>
 
         </LinearLayout>
     </HorizontalScrollView>
