--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/save"
-                android:src="@drawable/ic_action_save"/>
+                android:src="@drawable/ic_action_save"
+                android:onClick="saveBtn"/>
             <ImageButton
                 android:layout_marginTop="5dp"
                 android:layout_marginLeft="5dp"
